added in start server swager auto url
